# mash

./: Cargo.toml  README.md
.github/workflows/: main.yml  rust.yml
src/: args.rs  builtin.rs  cmd.rs  completion.rs  main.rs  parser.rs
